# liveguard

./: .example.env  .gitignore  docker-compose.yaml  go.mod  readme.md  run.sh  run_front.sh
.github/workflows/: build-back.yaml  build-front.yaml  docker-build.yaml  push-to-deploy-repo.yaml
action/: submit_test.go
back/: .dockerignore  .gitignore  Dockerfile  config.example.yaml  go.sum  main.go
back/action/: download.go  download_test.go  readme.md  startup.go  submit.go  transum.go  transum_test.go
back/cm/: config.go  config_test.go  filesystem_test.go  lang.go  lang_test.go  media.go  media_test.go  readme.md
back/pocket/: http_client.go  readme.md  singleton.go
back/repo/: base.go  readme.md  task.go  task_test.go
back/rest/: config.go  config_test.go  pocket.go  pocket_test.go  schema.go  startup.go  startup_test.go  task.go  task_test.go  testbase.go
cm/: config.go  config_test.go  filesystem.go  json.go  json_test.go
front/: .gitignore  Dockerfile  Index.py  api_client.py  config.py  db.py  index.py  panel.py  pyproject.toml  readme.md  test_api_client.py  test_db.py
front/pages/: 1_Live.py  2_Task.py  3_Story.py  live.py  task.py
pocket/: service_test.go
repo/: base_test.go  ddl.go  member.go  member_test.go  startup.go  task_test.go
rest/: readme.md  task.go
