[tool.poetry]
name = "bearguard"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
